--- a/hugo.toml
+++ b/hugo.toml
@@ -102,22 +102,22 @@ rel = "manifest"
 ######################### site variables ##############################
 # customize your color and font from here.
 [params.variables]
-color_primary = "#8be9fd"
+color_primary = "#0ED0FB"
 color_secondary = "#EDD11D"
-body_color = "#f6f6f6"
-text_color = "#2C3C77"
-text_dark = "#2C3C77"
-text_light = "8be9fd"
-border_color = "#ECECEC"
-dark_body_color = "#1E262C"
-dark_text_color = "#cbcbcb"
-dark_text_light = "#959595"
-dark_text_dark = "#fff"
-dark_border_color = "#4e4e4e"
-black = "#101418"
-white = "#fff"
-light = "#F1F1F1"
-dark = "#583629"
+body_color = "#ffffff"
+text_color = "#212D59"
+text_dark = "#212D59"
+text_light = "#212D59"
+border_color = "#212D59"
+dark_body_color = "#212D59"
+dark_text_color = "#212D59"
+dark_text_light = "#212D59"
+dark_text_dark = "#8be9fd"
+dark_border_color = "#EDD11D"
+black = "#39424E"
+white = "#ffffff"
+light = "#ebfbff"
+dark = "#212D59"
 
 # font variables
 # base font size for full website, 
@@ -138,7 +138,7 @@ font_scale = "1.25" # default is "majorThird": 1.25
 # example: "Work+Sans:wght@400;500;600"
 font_primary = "Big+Shoulders+Inline:wght@500;600;700"
 font_primary_type = "sans-serif"           # [serif/sans-serif]
-font_secondary = "Mulish:wght@400;500"
+font_secondary = "Work+Sans:wght@400;500;600"
 font_secondary_type = "sans-serif"         # [serif/sans-serif]
 font_icon = "Font Awesome 6 Free"          # https://fontawesome.com/v5.15/icons/
 
