--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -39,20 +39,20 @@ weight = 4
 
 
 # # footer menu left
-# [[footer_left]]
-# name = "About Us"
-# url = "/about"
-# weight = 1
+[[footer_left]]
+name = "About Us"
+url = "/about"
+weight = 1
 
-# [[footer_left]]
-# name = "Team"
-# url = "/team"
-# weight = 2
+[[footer_left]]
+name = "Team"
+url = "/team"
+weight = 2
 
-# [[footer_left]]
-# name = "How It Works"
-# url = "/how-it-works"
-# weight = 3
+[[footer_left]]
+name = "Case Studies"
+url = "/case-studies"
+weight = 3
 
 # [[footer_left]]
 # name = "Career"
